--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html>
 <head>
   <title>Nurburgring 1976 F1 Race</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5734476541110162"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Nurburgring 1976 Overview</h1>
   <p>On August 1st, 1976, the Nurburgring Grand Prix was hosted in Nordschelife Germany.
     The winner, James Hunt, won after 14 laps on the Nurburgring.
+  </p>
 
-    <h1>Niki Laudas crash</h1>
+  <h1>Niki Lauda's crash</h1>
+  <p>This race had an extremely unexpected event. On lap 2, Niki Lauda, driving for Ferrari
+    at the time, had a near-fatal crash at a fast left-hand kink heading into Bergwerk.
+  </p>
 
-    This race had a extremely unexpected event, on lap 2, after Niki Lauda, driving for Ferrari
-    at the time had a near-fatal crash at a fast left hand kink heading into Bergwerk.
-
-    <h1>Overview of the crash</h1>
-
-    Niki Lauda's car caught flames and was stuck for 55 seconds in burning flames.
-    Niki Lauda entered a coma that was about 3 to 4 days. He suffered sever burns
+  <h1>Overview of the crash</h1>
+  <p>Niki Lauda's car caught flames and he was stuck for 55 seconds in burning flames.
+    He entered a coma that lasted about 3 to 4 days. He suffered severe burns
     and made a full recovery after his near-fatal crash at the Nurburgring.
 
     He was still recovering and went to a race in a bandage.
   </p>
 </body>
-</html> 
+</html>
