--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Nurburgring 1976 F1 Race</title>
+
+  <!-- Google site verification -->
+  <meta name="google-site-verification" content="googlee50eb2162145abd0" />
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5734476541110162"
      crossorigin="anonymous"></script>
 </head>
