--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
 <head>
   <title>Nurburgring 1976 F1 Race</title>
-
-  <!-- Google site verification -->
-  <meta name="google-site-verification" content="googlee50eb2162145abd0" />
-
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5734476541110162"
      crossorigin="anonymous"></script>
 </head>
 <body>
+
   <h1>Nurburgring 1976 Overview</h1>
-  <p>On August 1st, 1976, the Nurburgring Grand Prix was hosted in Nordschelife Germany.
+  <p>On August 1st, 1976, the Nordschelife Germany hosted the Nurburgring Grand Prix.
     The winner, James Hunt, won after 14 laps on the Nurburgring.
   </p>
+
+  <!-- Advertisement 1 -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-5734476541110162"
+       data-ad-slot="2886999669"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 
   <h1>Niki Lauda's crash</h1>
   <p>This race had an extremely unexpected event. On lap 2, Niki Lauda, driving for Ferrari
